Add great tea section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="tailwind-init.css">
 
     <style>
-        .{
+    *{
             font-family: "Manrope", sans-serif; 
         }
     </style>
@@ -79,9 +79,17 @@ tea time at The <br> Tea House</h1>
 
       <!-- great tea section -->
        <section class="m-30">
-        <div>
-            <div>
+        <div class="grid grid-cols-2 gap-10">
+            <div class="grid grid-cols-2 grid-rows-3 gap-6 ">
                 <!-- img -->
+                 <div class="bg-gradient-to-r from-pink-300 to-purple-300 row-span-1 rounded-lg"></div>
+                 <div class="row-span-2 bg-gradient-to-r from-red-300 to-blue-300 rounded-lg grid place-items-center"> 
+                    <img src="images/fresh-1.png" alt="">
+                 </div>
+                 <div class="row-span-2 bg-gradient-to-r from-green-300 to-teal-300 rounded-lg grid place-items-center">
+                    <img src="images/fresh-2.png" alt="" >
+                 </div>
+                 <div class="bg-gradient-to-r from-blue-300 to-cyan-300 rounded-lg"></div>
 
             </div>
             <div>
