--- a/index.html
+++ b/index.html
@@ -136,5 +136,37 @@ tea time at The <br> Tea House</h1>
 
             </div>
         </section>
+
+        <!-- event sectoin -->
+         <section>
+            <div class="m-30">
+                <h1 class="text-[44px] font-bold pb-4 text-center">News & Events</h1>
+                <p class="text-gray-500 pb-15 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+                <div class="flex justify-center">
+                    <div class="border-2 border-gray-300 rounded-lg p-4 mx-4">
+                        <img src="images/news-1.png" alt="">
+                        <p class="text-gray-500 pt-3">Feb 05, 2027</p>
+                        <h3 class="text-lg font-bold pb-3 pt-3">Collecting 8 points for discount</h3>
+                        <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="pt-3 font-semibold">Learn More</p>
+                    </div>
+                    <div class="border-2 border-gray-300 rounded-lg p-4 mx-4">
+                        <img src="images/news-2.png" alt="">
+                        <p class="text-gray-500 pt-3">Feb 05, 2027</p>
+                        <h3 class="text-lg font-bold pb-3 pt-3">Collecting 8 points for discount</h3>
+                        <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="pt-3 font-semibold">Learn More</p>
+                    </div>
+                    <div class="border-2 border-gray-300 rounded-lg p-4 mx-4">
+                        <img src="images/news-3.png" alt="">
+                        <p class="text-gray-500 pt-3">Feb 05, 2027</p>
+                        <h3 class="text-lg font-bold pb-3 pt-3">Collecting 8 points for discount</h3>
+                        <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="pt-3 font-semibold">Learn More</p>
+                    </div>
+                </div>
+            </div>
+         </section>
 </body>
 </html>
