--- a/index.html
+++ b/index.html
@@ -168,5 +168,63 @@ tea time at The <br> Tea House</h1>
                 </div>
             </div>
          </section>
+
+         <!-- footer section -->
+          <section class="bg-orange-100 p-3">
+           <div class="m-30">
+             <div class="grid grid-cols-2 gap-10 mb-10">
+                <div>
+                    <img src="images/cup.png" alt="">
+                </div>
+                <div class="grid grid-cols-2 gap-2">
+                    <p class="text-gray-500">Ready to get starter</p>
+                    <button class="bg-gradient-to-r from-amber-500 to-red-500 text-white px-4 py-3 rounded-lg">Get Started</button>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-4">
+                <div>
+                    <p class="text-lg font-bold pb-3">Quick Links</p>
+                    <ul class="text-gray-600">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                 <div>
+                    <p class="text-lg font-bold pb-3">Our Services</p>
+                    <ul class="text-gray-600">
+                        <li>Life Insurance</li>
+                        <li>Car Insurance</li>
+                        <li>Property Insurance</li>
+                        <li>house Insurance</li>
+                    </ul>
+                </div>
+                 <div>
+                    <p class="text-lg font-bold pb-3">Helps</p>
+                    <ul class="text-gray-600">
+                        <li>FAQs</li>
+                        <li>Contract us</li>
+                    </ul>
+                </div>
+                 <div>
+                    <p class="text-lg font-bold">Subscribe to our newsletter</p><br>
+                    <div class="gap-30">
+                        <label for="" class="pr-25">Email Address</label>
+                        <button class="bg-gradient-to-r from-amber-500 to-red-500 text-white px-2  rounded-[50%]">></button>
+                    </div>
+                    <input type="text" class="w-full border-b-2 border-gray-400 focus:border-blue-500 outline-none py-2"> 
+                    <div class="pt-4 flex space-x-4">
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                </div>                   
+                </div>
+                
+            </div>
+            <p class="text-gray-600 text-center pt-6">© 2027 UIDesign.to - All rights reserved.</p>
+           </div>
+          </section>
 </body>
 </html>
